b=750061 Put the hidden drag widget in the window group of the source node so that the gtk_grab_add during gtk_drag_begin is effective r=roc