widget/gtk2/nsWindow.cpp
@@ -271,9 +271,6 @@ static void    drag_data_received_event_cb(GtkWidget *aWidget,
 /* initialization static functions */
 static nsresult    initialize_prefs        (void);
 
-// Time of the last button release event. We use it to detect when the
-// drag ended before we could properly setup drag and drop.
-static guint32 sLastButtonReleaseTime = 0;
 static guint32 sLastUserInputTime = GDK_CURRENT_TIME;
 static guint32 sRetryGrabTime;
 
@@ -2630,8 +2627,6 @@ nsWindow::DispatchMissedButtonReleases(GdkEventCrossing *aGdkEvent)
             synthEvent.button = buttonType;
             nsEventStatus status;
             DispatchEvent(&synthEvent, status);
-
-            sLastButtonReleaseTime = aGdkEvent->time;
         }
     }
 }
@@ -2711,9 +2706,6 @@ nsWindow::OnButtonPressEvent(GtkWidget *aWidget, GdkEventButton *aEvent)
         if (type == GDK_2BUTTON_PRESS || type == GDK_3BUTTON_PRESS)
             return;
     }
-
-    // We haven't received the corresponding release event yet.
-    sLastButtonReleaseTime = 0;
 
     nsWindow *containerWindow = GetContainerWindow();
     if (!gFocusWindow && containerWindow) {
@@ -2798,8 +2790,6 @@ nsWindow::OnButtonReleaseEvent(GtkWidget *aWidget, GdkEventButton *aEvent)
     LOG(("Button %u release on %p\n", aEvent->button, (void *)this));
 
     PRUint16 domButton;
-    sLastButtonReleaseTime = aEvent->time;
-
     switch (aEvent->button) {
     case 1:
         domButton = nsMouseEvent::eLeftButton;
@@ -5655,24 +5645,6 @@ drag_motion_event_cb(GtkWidget *aWidget,
     nsRefPtr<nsWindow> window = get_window_for_gtk_widget(aWidget);
     if (!window)
         return FALSE;
-
-    if (sLastButtonReleaseTime) {
-      // The drag ended before it was even setup to handle the end of the drag
-      // So, we fake the button getting released again to release the drag
-      GtkWidget *widget = gtk_grab_get_current();
-      GdkEvent event;
-      gboolean retval;
-      memset(&event, 0, sizeof(event));
-      event.type = GDK_BUTTON_RELEASE;
-      event.button.time = sLastButtonReleaseTime;
-      event.button.button = 1;
-      sLastButtonReleaseTime = 0;
-      if (widget) {
-        g_signal_emit_by_name(widget, "button_release_event", &event, &retval);
-        // FALSE means we won't reply with a status message.
-        return FALSE;
-      }
-    }
 
     // figure out which internal widget this drag motion actually happened on
     nscoord retx = 0;
